# taty-sub-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: setup.md  skills.md  tools.md  usage.md
scripts/: seed_skills.py
skills/: code-reviewer.md  nodejs-developer.md  python-developer.md
src/: server.py
src/agent/: __init__.py  invoker.py  tools.py
src/core/: config.py  models.py
src/memory/: __init__.py  synatyx.py
src/providers/: __init__.py  anthropic.py  openai.py
src/skills/: __init__.py  loader.py  router.py
tests/: test_loader.py  test_models.py  test_router.py
